# tauritest

./: components.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.codemap/: float-area-793791e6-8b16-4c27-a2ac-b84fd1305285.json  main-panel.json
src/: main.tsx
src-tauri/: Cargo.toml  myapp.db  tauri.conf.json
src-tauri/src/: database_manager.rs  example.rs  main.rs
src-tauri/src/database_manager/: database.rs  database_tauri.rs
src/logger/: logger.tsx
src/modules/calendar/: datepicker.css  datepicker.tsx
src/modules/kanban/: DropIndicator.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  interface.ts
src/modules/reordablelist/: ReorderableList.tsx  SortableItem.tsx
src/modules/schedule/: ConfirmDelete.css  ConfirmDelete.tsx  EventCellForm.css  EventCellForm.tsx  EventList.tsx  EventSummary.css  EventSummary.tsx  Eventlist.css  Schedule.css  Schedule.tsx  ScheduleInterface.tsx  ScheduleView.tsx  SelectionActions.css  SelectionActions.tsx  Tag.css  Tag.tsx  fun.md  scheduleview.css  useDragAndDrop.ts
src/modules/timepicker/: Timepicker.css  Timepicker.tsx
src/modules/todolist/: todolist.css  todolist.tsx
src/state_manager/: menu_slice.tsx  navigate.ts  navigation_slice.tsx  store.tsx
src/test/: setup.ts
src/test/database/: useBlocDatabase.test.ts  useDatabase.test.ts  usePageDatabase.test.ts  usePropDatabase.test.ts
src/texteditor/: App.tsx  Editor.tsx  editor.css  index.css  index.tsx  left.css  main.css  right.css
src/types/: schedule.ts
src/utils/: eventUtils.ts
(+92 files in other folders)
