[package]
name = "tauritest"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.8.0", features = [ "path-all", "shell-open"] }
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = [ "sqlite", "runtime-tokio" ] }
tokio = { version = "1.20.0", features = ["sync"] }
anyhow = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
debug=false
